Upgrade Java clients to use 32 GB of RAM